--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/_ViewImports.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Olbrasoft.Blog.AspNetCore.Mvc.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
