--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/_ViewImports.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/_ViewImports.cshtml
@@ -1,7 +1,6 @@
 ﻿@using Olbrasoft.Blog.AspNetCore.Mvc
 @using Olbrasoft.Blog.AspNetCore.Mvc.Models
-@using Olbrasoft.Text.Transformation.Markdown
-@addTagHelper *,Olbrasoft.Blog.AspNetCore.Mvc.TagHelpers
+@using Olbrasoft.Text.Transformation
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *,Olbrasoft.Paging.X.PagedList.AspNetCore
-@addTagHelper *, Olbrasoft.Paging.X.PagedList.AspNetCore.Mvc
+@addTagHelper *,Olbrasoft.Text.Transformation
+@addTagHelper *,Olbrasoft.Data.Paging.X.PagedList.AspNetCore.Mvc
