--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Home/Index.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using Olbrasoft.Paging.X.PagedList.AspNetCore.Mvc
+﻿@using Olbrasoft.Data.Paging.X.PagedList.AspNetCore.Mvc
 @model HomePageViewModel
-@inject IMarkdownTransformer _transformer
 
 @{
     ViewData["Title"] = "Home Page";
@@ -23,12 +22,12 @@
                 <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
                 <div class="card-body">
                     <h2 class="card-title">@post.Title</h2>
-                    <p class="card-text">@System.Text.RegularExpressions.Regex.Replace(_transformer.TransformToPlainText(post.Content), @"<(.|\n)*?>", "")</p>
+                    <p class="card-text"><markdown>@post.Content</markdown></p>
                     <a asp-area="" asp-controller="Home" asp-action="Post" asp-route-id="@post.Id" class="btn btn-primary">Read More &rarr;</a>
                 </div>
                 <div class="card-footer text-muted">
-                    Posted on January 1, 2017 by
-                    <a href="#">Start Bootstrap</a>
+                    Posted on @post.Created.ToString("dddd, dd MMMM yyyy")  By
+                    <a href="#@post.CreatorId">@post.Creator</a>
                 </div>
             </div>
         }
@@ -44,58 +43,6 @@
         <pager list="@Model.Posts" asp-area="" asp-controller="Home" asp-action="Index" param-page-number="pageNumber" options="@options"></pager>
     </div>
 
-    <!-- Sidebar Widgets Column -->
-    <div class="col-md-4">
-
-        <!-- Search Widget -->
-        <div class="card my-4">
-            <h5 class="card-header">Search</h5>
-            <div class="card-body">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-append">
-                        <button class="btn btn-secondary" type="button">Go!</button>
-                    </span>
-                </div>
-            </div>
-        </div>
-
-        <!-- Categories Widget -->
-        <div class="card my-4">
-            <h5 class="card-header">Categories</h5>
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                            @foreach (var category in Model.Categories.Item1)
-                            {
-                                <li>
-                                    <a href="#">@category.Name</a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                            @foreach (var category in Model.Categories.Item2)
-                            {
-                                <li>
-                                    <a href="#">@category.Name</a>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Side Widget -->
-        <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
-            <div class="card-body">
-                You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-            </div>
-        </div>
-    </div>
+    <partial name="~/Views/Shared/_RightColumnPartial.cshtml" model="@Model.NestedModel" />
 </div>
 <!-- /.row -->
