--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Home/Post.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Home/Post.cshtml
@@ -19,7 +19,7 @@
         <hr>
         <img class="img-fluid rounded" src="http://placehold.it/750x300" alt="">
         <hr>
-        <markdown to="@TextType.Html">@Model.Post.Content</markdown>
+        <markdown raw="true">@Model.Post.Content</markdown>
         <hr>
         <div class="card my-4">
             <h5 class="card-header">Leave a Comment:</h5>
