--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/_ViewImports.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using Olbrasoft.Blog.AspNetCore.Mvc.Models
 @using Olbrasoft.Text.Transformation
 @addTagHelper *,Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *,Olbrasoft.Text.Transformation
+@addTagHelper *, Olbrasoft.Text.Transformation.Markdown
 @addTagHelper *,Olbrasoft.Data.Paging.X.PagedList.AspNetCore.Mvc
