--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Categories/Index.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Categories/Index.cshtml
@@ -1,17 +1,18 @@
 ﻿@model CategoriesViewModel
+@inject Microsoft.AspNetCore.Mvc.Localization.IHtmlLocalizer<SharedResources> _localizer
 @{
     ViewData["Title"] = "Categories";
     Layout = "~/Areas/Administration/Views/Shared/_Layout.cshtml";
 }
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Categories</h1>
+    <h1 class="h3 mb-0 text-gray-800">@_localizer["Categories"]</h1>
 </div>
 
 <div class="row">
     <div class="col-lg-12">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">Category information</h6>
+                <h6 class="m-0 font-weight-bold text-primary" localize>Category information</h6>
             </div>
             <div class="card-body">
                 <form asp-area="Administration" asp-controller="Categories" asp-action="Save" method="post" role="form">
@@ -39,8 +40,8 @@
 <div class="row">
     <div class="col-lg-6 mb-4">
         <div class="card shadow mb-4">
-            <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary"> Your categories</h6>
+            <div class="card-header py-3" >
+                <h6 class="m-0 font-weight-bold text-primary" localize>Your categories</h6>
             </div>
             <div class="card-body">
                 <table class="table table-striped table-bordered table-hover" id="your-categories">
@@ -59,7 +60,7 @@
     <div class="col-lg-6 mb-4">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary"> Other users' categories</h6>
+                <h6 class="m-0 font-weight-bold text-primary" >Other users' categories</h6>
             </div>
             <div class="card-body">
                 <table class="table table-striped table-bordered table-hover" id="other-users-categories">
@@ -74,6 +75,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 @section scripts {
@@ -81,9 +83,9 @@
     <script src="~/js/datetime-moment/datetime-moment.js" asp-append-version="true"></script>
 
     <script type="text/javascript">
-
-      var textlen
-
+        var edit = "Edit";
+    var textlen;
+ 
     var tooltipMaxLength = @Model.TooltipLength;
     $('#description').keyup(function () {
         textlen = tooltipMaxLength - $(this).val().length;
@@ -152,7 +154,7 @@
                 { "name": "Created", "targets": 2 },
                 {
                     "targets": 3, "data": "id", "className":"dt-body-right"  , "render": function (data, type, full, meta) {
-                        return '<a  href=/Administration/Categories/Index/' + data +'><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>'
+                            return '<div style="width:76px"><a  href=/Administration/Categories/Index/' + data + '><i class="fa fa-pencil" aria-hidden="true"></i> ' + edit + '</a></div>'
 
                     }
                 },
