--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Tags/Index.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Tags/Index.cshtml
@@ -84,152 +84,152 @@
 
     <script type="text/javascript">
 
-    var textlen
+        var textlen
 
-    $('#label').keyup(function () {
-        textlen = @Model.MaxLength - $(this).val().length;
-        $('#remaingCharacters').text(textlen);
-    });
-
-    $(() => {
-        $.fn.dataTable.moment("DD/MM/YYYY HH:mm:ss");
-        $.fn.dataTable.moment("DD/MM/YYYY");
-
-        $("#your-tags").DataTable({
-            // Design Assets
-            stateSave: true,
-            autoWidth: true,
-            // ServerSide Setups
-            processing: true,
-            serverSide: true,
-            // Paging Setups
-            paging: true,
-            // Searching Setups
-            searching: { regex: true },
-            searchable: true,
-            // Ajax Filter
-            ajax: {
-                url: "/Administration/Tags/CurrentUserTags",
-                type: "POST",
-                contentType: "application/json",
-                dataType: "json",
-                data: function (d) {
-                    return JSON.stringify(d);
-                }
-            },
-            language: {
-                processing: "<img src='/Images/GearLoading.gif'>",
-                emptyTable: "No data available in table"
-            },
-            // Columns Setups
-            columns: [
-                { data: "label" },
-                {
-                    data: "created",
-                    render: function (data, type, row) {
-                        // If display or filter data is requested, format the date
-                        if (type === "display" || type === "filter") {
-                            return moment(data).format("ddd DD/MM/YYYY HH:mm:ss");
-                        }
-                        // Otherwise the data type requested (`type`) is type detection or
-                        // sorting data, for which we want to use the raw date value, so just return
-                        // that, unaltered
-                        return data;
-                    }
-                }
-            ],
-            // Column Definitions
-            columnDefs: [
-                { "name": "Label", "targets": 0 },
-                {
-                    "targets": 2, "data": "id", "className":"dt-body-right"  , "render": function (data, type, full, meta) {
-                        return '<a  href=/Administration/Tags/Index/' + data +'><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>'
-
-                    }
-                },
-                { "name": "Created", "targets": 1 },
-                { "searchable": true, "targets": 0 },
-                { targets: "no-sort", orderable: false },
-                { targets: "no-search", searchable: false },
-                {
-                    targets: "trim",
-                    render: function (data, type, full, meta) {
-                        if (type === "display") {
-                            data = strtrunc(data, 10);
-                        }
-
-                        return data;
-                    }
-                },
-                { targets: "date-type", type: "date-eu" }
-            ]
+        $('#label').keyup(function () {
+            textlen = @Model.MaxLength - $(this).val().length;
+            $('#remaingCharacters').text(textlen);
         });
 
-        $("#other-users-tags").DataTable({
-            // Design Assets
-            stateSave: true,
-            autoWidth: true,
-            // ServerSide Setups
-            processing: true,
-            serverSide: true,
-            // Paging Setups
-            paging: true,
-            // Searching Setups
-            searching: { regex: true },
-            searchable: true,
-            // Ajax Filter
-            ajax: {
-                url: "/Administration/Tags/OtherUsersTags",
-                type: "POST",
-                contentType: "application/json",
-                dataType: "json",
-                data: function (d) {
-                    return JSON.stringify(d);
-                }
-            },
-            language: {
-                processing: "<img src='/Images/GearLoading.gif'>",
-                emptyTable: "No data available in table"
-            },
-            // Columns Setups
-            columns: [
-                { data: "label" },
-                {data: "creator"},
-                {
-                    data: "created",
-                    render: function (data, type, row) {
-                        // If display or filter data is requested, format the date
-                        if (type === "display" || type === "filter") {
-                            return moment(data).format("ddd DD/MM/YYYY HH:mm:ss");
-                        }
-                        // Otherwise the data type requested (`type`) is type detection or
-                        // sorting data, for which we want to use the raw date value, so just return
-                        // that, unaltered
-                        return data;
-                    }
-                }
-            ],
-            // Column Definitions
-            columnDefs: [
-                { "name": "Label", "targets": 0 },
-                { "name": "Creator", "targets": 1 },
-                { "name": "Created", "targets": 2 },
-                { "searchable": true, "targets": 0 },
-                { targets: "no-sort", orderable: false },
-                { targets: "no-search", searchable: false },
-                {
-                    targets: "trim",
-                    render: function (data, type, full, meta) {
-                        if (type === "display") {
-                            data = strtrunc(data, 10);
-                        }
+        $(() => {
+            $.fn.dataTable.moment("DD/MM/YYYY HH:mm:ss");
+            $.fn.dataTable.moment("DD/MM/YYYY");
 
-                        return data;
+            $("#your-tags").DataTable({
+                // Design Assets
+                stateSave: true,
+                autoWidth: true,
+                // ServerSide Setups
+                processing: true,
+                serverSide: true,
+                // Paging Setups
+                paging: true,
+                // Searching Setups
+                searching: { regex: true },
+                searchable: true,
+                // Ajax Filter
+                ajax: {
+                    url: "/Administration/Tags/CurrentUserTags",
+                    type: "POST",
+                    contentType: "application/json",
+                    dataType: "json",
+                    data: function (d) {
+                        return JSON.stringify(d);
                     }
                 },
-                { targets: "date-type", type: "date-eu" }
-            ]
+                language: {
+                    processing: "<img src='/Images/GearLoading.gif'>",
+                    emptyTable: "No data available in table"
+                },
+                // Columns Setups
+                columns: [
+                    { data: "label" },
+                    {
+                        data: "created",
+                        render: function (data, type, row) {
+                            // If display or filter data is requested, format the date
+                            if (type === "display" || type === "filter") {
+                                return moment(data).format("ddd DD/MM/YYYY HH:mm:ss");
+                            }
+                            // Otherwise the data type requested (`type`) is type detection or
+                            // sorting data, for which we want to use the raw date value, so just return
+                            // that, unaltered
+                            return data;
+                        }
+                    }
+                ],
+                // Column Definitions
+                columnDefs: [
+                    { "name": "Label", "targets": 0 },
+                    {
+                        "targets": 2, "data": "id", "className": "dt-body-right", "render": function (data, type, full, meta) {
+                            return '<a  href=/Administration/Tags/Index/' + data + '><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a>'
+
+                        }
+                    },
+                    { "name": "Created", "targets": 1 },
+                    { "searchable": true, "targets": 0 },
+                    { targets: "no-sort", orderable: false },
+                    { targets: "no-search", searchable: false },
+                    {
+                        targets: "trim",
+                        render: function (data, type, full, meta) {
+                            if (type === "display") {
+                                data = strtrunc(data, 10);
+                            }
+
+                            return data;
+                        }
+                    },
+                    { targets: "date-type", type: "date-eu" }
+                ]
+            });
+
+            $("#other-users-tags").DataTable({
+                // Design Assets
+                stateSave: true,
+                autoWidth: true,
+                // ServerSide Setups
+                processing: true,
+                serverSide: true,
+                // Paging Setups
+                paging: true,
+                // Searching Setups
+                searching: { regex: true },
+                searchable: true,
+                // Ajax Filter
+                ajax: {
+                    url: "/Administration/Tags/OtherUsersTags",
+                    type: "POST",
+                    contentType: "application/json",
+                    dataType: "json",
+                    data: function (d) {
+                        return JSON.stringify(d);
+                    }
+                },
+                language: {
+                    processing: "<img src='/Images/GearLoading.gif'>",
+                    emptyTable: "No data available in table"
+                },
+                // Columns Setups
+                columns: [
+                    { data: "label" },
+                    { data: "creator" },
+                    {
+                        data: "created",
+                        render: function (data, type, row) {
+                            // If display or filter data is requested, format the date
+                            if (type === "display" || type === "filter") {
+                                return moment(data).format("ddd DD/MM/YYYY HH:mm:ss");
+                            }
+                            // Otherwise the data type requested (`type`) is type detection or
+                            // sorting data, for which we want to use the raw date value, so just return
+                            // that, unaltered
+                            return data;
+                        }
+                    }
+                ],
+                // Column Definitions
+                columnDefs: [
+                    { "name": "Label", "targets": 0 },
+                    { "name": "Creator", "targets": 1, "orderable": false },
+                    { "name": "Created", "targets": 2 },
+                    { "searchable": true, "targets": 0 },
+                    { targets: "no-sort", orderable: false },
+                    { targets: "no-search", searchable: false },
+                    {
+                        targets: "trim",
+                        render: function (data, type, full, meta) {
+                            if (type === "display") {
+                                data = strtrunc(data, 10);
+                            }
+
+                            return data;
+                        }
+                    },
+                    { targets: "date-type", type: "date-eu" }
+                ]
+            });
         });
-    });
     </script>
 }
