--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@inject IHtmlLocalizer<Shared> Localizer
+﻿@inject IHtmlLocalizer<Olbrasoft.Blog.AspNetCore.Mvc.SharedResources> Localizer
 
 <!DOCTYPE html>
 <html lang="en">
