--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Posts/Index.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Posts/Index.cshtml
@@ -122,11 +122,11 @@
 
         });
         mditor.openPreview();
-
-        var textlen
+            
+        $('#remaingCharacters').text(@Model.MaxLength -  $('#post-title').val().length)
 
         $('#post-title').keyup(function () {
-            textlen = @Model.MaxLength - $(this).val().length;
+           var textlen = @Model.MaxLength - $(this).val().length;
             $('#remaingCharacters').text(textlen);
         });
 
