--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Tags/Index.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Tags/Index.cshtml
@@ -83,6 +83,10 @@
 
     <script type="text/javascript">
 
+
+       
+
+
         function onDeleteClick(confirmText, id) {
 
             var table = $("#your-tags").DataTable()
@@ -145,7 +149,10 @@
                     type: "POST",
                     contentType: "application/json",
                     dataType: "json",
-                    data: function (d) {
+                    data:                 
+                    function (d) {
+                       
+
                         return JSON.stringify(d);
                     }
                 },
