--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -64,13 +64,17 @@
             </li>
 
             <li class="nav-item @(ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Posts" ? "active" : "")">
-                <a asp-area="Administration" asp-controller="Posts" asp-action="Index" class="nav-link"><i class="fa fa-edit fa-fw"></i><span> Posts</span></a>
+                
+                <a asp-area="Administration" asp-controller="Posts" asp-action="Index" asp-route-id="" class="nav-link">
+                    <i class="fa fa-edit fa-fw"></i><span> Posts</span>
+                    
+                </a>
             </li>
             <li class="nav-item @(ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Categories" ? "active" : "")">
                 <a asp-area="Administration" asp-controller="Categories" asp-action="Index" asp-route-id="" class="nav-link"><i class="fa fa-sitemap fa-fw"></i> <span>Categories</span></a>
             </li>
             <li class="nav-item @(ViewContext?.RouteData?.Values["Controller"]?.ToString() == "Tags" ? "active" : "")">
-                <a asp-area="Administration" asp-controller="Tags" asp-action="Index" class="nav-link"><i class="fa fa-tags fa-fw"></i><span>Tags</span></a>
+                <a asp-area="Administration" asp-controller="Tags" asp-action="Index" asp-route-id="" class="nav-link"><i class="fa fa-tags fa-fw"></i><span>Tags</span></a>
             </li>
 
             <!-- Nav Item - Pages Collapse Menu -->
