--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Home/Index.cshtml
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Views/Home/Index.cshtml
@@ -17,18 +17,17 @@
         {
             <div class="card mb-4">
            
-                @if (string.IsNullOrEmpty( post.ImageExtension ))
+                @if (string.IsNullOrEmpty( post.Image ))
                 {
                     <img class="card-img-top" src="https://via.placeholder.com/750x300" alt="Card image cap">
                     
                 }
                 else
                 {
-                    <img src="@Url.Action("DefaultImage", "Home", new { blogId = post.Id, extension = post.ImageExtension })" alt="Image" class="card-img-top" />
+                    <img src="/Images/@post.Id/@post.Image" alt="Image" class="card-img-top" />
                 }
                                
-
-           
+                           
                 <div class="card-body">
                     <div class="small text-muted">@post.Created.ToString("dd MMMM yyyy")</div>
                     <h2 class="card-title">@post.Title</h2>
